# MeetingRoomManagement

./: .env  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  name.json  pyproject.toml
.github/workflows/: main.yml
docker/: DockerFile
meetingroomanager/: manage.py
meetingroomanager/authentication/: serializers.py  tests.py  urls.py  views.py
meetingroomanager/meetingroomanager/: asgi.py  settings.py  urls.py  wsgi.py
meetingroomanager/reservation/: models.py  serializers.py  tests.py  urls.py  views.py
meetingroomanager/reservation/migrations/: 0001_initial.py  0002_reservation.py  0003_auto_20210521_0353.py  0004_reservation_exclude_overlapping_reservations.py
